<resources>
    <string name="app_name">ColorsCase</string>
    <string name="alias">Alias</string>
    <string name="content_description_logo">Icon of application</string>
    <string name="play">Start</string>
    <string name="score">Score</string>
    <string name="ready">Ready </string>
    <string name="looser">L O O S E R !</string>
    <string name="tab_score">Table of score</string>
    <string name="rang">Rang</string>
    <string name="startCounter">0</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="saved">Saved ! 👍</string>
    <string name="easy">Easy 💩</string>
    <string name="medium">Medium 🤔</string>
    <string name="hard">Hard 🔥</string>
    <string name="no_username">Username missing.. 😔</string>
    <string name="hello">Hello</string>
</resources>
