<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LooserActivity">

    <LinearLayout
        android:id="@+id/plan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/looserText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/looser"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/scoreText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="36sp"
                app:layout_constraintBottom_toTopOf="@+id/saveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/looserText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:minHeight="@dimen/dimenHeight"
                android:text="@string/save"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toTopOf="@+id/homeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scoreText" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bleu"
                android:minHeight="@dimen/dimenHeight"
                android:text="@string/home"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>