<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <View
        android:id="@+id/referenceView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toBottomOf="@id/countdownText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ready"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceView" />

    <ProgressBar
        android:id="@+id/gameProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownText" />

    <GridLayout
        android:id="@+id/playGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:columnCount="4"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scorelabelText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameProgressBar">

        <Button
            android:id="@+id/button0"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button2"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button3"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button5"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button6"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button7"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button8"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button9"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button10"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button11"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button12"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button13"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button14"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />

        <Button
            android:id="@+id/button15"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:minWidth="@dimen/dimenButton"
            android:minHeight="@dimen/dimenButton" />
    </GridLayout>

    <TextView
        android:id="@+id/scorelabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/scoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGrid" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/startCounter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>